intranet.home.arpa/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /agario
        backend:
          serviceName: agario-service
          servicePort: 3000
      - path: /
        backend:
          serviceName: intranet-service
          servicePort: 80
